  candidates. Now it shows all candidate applications and also adds a Select... option so the
  user can manually search for the application. This also fixes the bug where Vienna took over
  the feed handler from others without permission.
- Smart folders now support 'any' in addition to the implied 'all' condition. So you can now
  create folders which match one or more combination of criteria.
- Clicking the dock icon now reopens the main window if it was previously closed.
- Added Swedish localisation (contributed by Christoffer Larsson).
- Several internal fixes for issues thrown up by Swedish localisation.
- View->Next Unread now goes to folders that have subscriptions with unread articles as well
  as to the subscriptions themselves. This causes Vienna to respect the closed state of group
  folders.
- Improved the logic by which folder images are retrieved to make this more reliable.
- New About Vienna window.
- The count of unread articles now show up as button in the folder list to the right of each
  subscription name.

2.0.0.2003
----------
- Add an option to mark the current article read after 1 second. This is now the new default.
- Fix import/export to convert characters such as <, > and & to and from their entity equivalents
  in URL fields as per XML specification.
- Add View->Article Page to display the original web page from which the article came. The short
  cut for this is 'P'. The command toggles between the web page and the original article.
- Support content:encoding in RSS 2.0 feeds and use that to override description where available.
  (This fixes the parsing of sites such as http://feeds.feedburner.com/MajorNelson).
- In Atom feeds, where no explicit author is specified for an article, use the feed author if available.
- Mark All Read now works in smart folders.
- Add File->Close Window command to close the main Vienna window and Window->Main Window to reopen
  it again. While the main window is closed, all UI commands are disabled.